--- a/css/main.css
+++ b/css/main.css
@@ -274,15 +274,14 @@ a {
 
 /* Hero section */
 .hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100vh;
     background: url("../images/home/laptop.jpg") no-repeat center center/cover;
     position: relative;
-    color: #fff;
+}
+
+.hero-container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 20px;
 }
 
 .hero::before {
@@ -295,9 +294,73 @@ a {
     background: rgba(0,0,0,0.6);
 }
 
-.hero h2,
-.hero h1,
-.hero h3,
-.hero a {
+.hero-items {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+
+.hero-items h2,
+.hero-items h1,
+.hero-items h3,
+.hero-items a {
     z-index: 10;
+}
+
+.hero-items h2 {
+    font-size: 40px;
+    margin-bottom: 16px;
+}
+
+.hero-items h1 {
+    font-size: 64px;
+    margin-bottom: 16px;
+}
+
+.hero-items h3 {
+    font-size: 32px;
+    margin-bottom: 16px;
+}
+
+.hero-items a {
+    border: 2px solid #fff;
+    padding: 10px 20px;
+    color: #fff;
+    transition: all 0.5s ease-out;
+}
+
+.hero-items a:hover {
+    opacity: 0.3;
+}
+
+@media (max-width: 963px) {
+    .hero-items h2 {
+        font-size: 30px;
+    }
+
+    .hero-items h1 {
+        font-size: 30px;
+    }
+
+    .hero-items h3 {
+        font-size: 30px;
+    }
+
+}
+
+@media (max-width: 518px) {
+    .hero-items h2 {
+        font-size: 20px;
+    }
+
+    .hero-items h1 {
+        font-size: 20px;
+    }
+
+    .hero-items h3 {
+        font-size: 20px;
+    }
 }
