Theme changed to blue

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@
     /*Color mode HSL(hue, saturation, lightness)*/
     --white-color: hsl(0, 0%, 100%);
     --black-color: hsl(0, 0%, 0%);
+    --blue-color: #5372f0;
+    --blue-light-color: #d2dafc;
+    --deep-blue: blue;
+
 
     /*========== Font and typography ==========*/
     /*.5rem = 8px | 1rem = 16px ...*/
@@ -69,7 +73,7 @@ a {
     width: 100%;
     top: 0;
     left: 0;
-    background-color: var(--black-color);
+    background-color: var(--blue-color);
     z-index: var(--z-fixed);
 }
 
@@ -105,7 +109,7 @@ a {
         position: fixed;
         left: -100%;
         top: 0;
-        background-color: var(--black-color);
+        background-color: var(--blue-color);
         width: 100%;
         height: 100%;
         padding: 6rem 3.5rem 4.5rem;
@@ -291,7 +295,8 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.6);
+    background: var(--blue-color);
+    opacity: 0.6;
 }
 
 .hero-items {
@@ -308,6 +313,12 @@ a {
 .hero-items h3,
 .hero-items a {
     z-index: 10;
+}
+
+.hero-items h2,
+.hero-items h1,
+.hero-items h3 {
+    text-shadow: 2px 2px var(--blue-color);
 }
 
 .hero-items h2 {
@@ -367,9 +378,9 @@ a {
 
 /* quote */
 .quote {
-    background: black;
+    background: var(--blue-color);
     color: #fff;
-    border-bottom: 10px solid grey;
+    border-bottom: 10px solid var(--deep-blue);
 }
 
 .quote-items {
@@ -399,31 +410,31 @@ a {
     margin: auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    color: #333;
+    color: var(--black-color);
 }
 
 .why-choose h1 {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .why-choose > *:nth-child(2) {
     font-size: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .why-choose > *:nth-child(3) {
     font-size: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .why-choose > *:nth-child(4) {
     font-size: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .why-shield {
     text-align: center;
-    background: black;
+    background: var(--blue-color);
     color: #fff;
     padding: 20px;
     border-radius: 30px;
@@ -449,7 +460,7 @@ a {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: black;
+    background: linear-gradient(#ECEFFE, #C5CFFC);
 }
 
 .card-wrapper {
@@ -480,7 +491,7 @@ a {
 }
 
 .card-list .card-item .card-link:hover {
-    border-color: #fff;
+    border-color: #5372F0;
 }
 
 .card-list .card-link .card-image {
@@ -530,26 +541,26 @@ a {
 .card-list .card-link .card-button {
     height: 35px;
     width: 35px;
-    color: #333;
+    color: #5372F0;
     margin: 30px 0 5px;
     background: none;
     cursor: pointer;
     border-radius: 50%;
-    border: 2px solid #333;
+    border: 2px solid #5372F0;
     transform: rotate(-45deg);
     transition: 0.4s ease;
 }
 
 .card-list .card-link:hover .card-button {
     color: #fff;
-    background: #333;
+    background: #5372F0;
 }
 
 .card-wrapper .swiper-pagination-bullet {
     height: 13px;
     width: 13px;
     opacity: 0.5;
-    background: #fff;
+    background: #5372F0;
 }
 
 .card-wrapper .swiper-pagination-bullet-active {
@@ -557,7 +568,7 @@ a {
 }
 
 .card-wrapper .swiper-slide-button {
-    color: #fff;
+    color: #5372F0;
     margin-top: -35px;
 }
 
