blue color darken

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
     /*Color mode HSL(hue, saturation, lightness)*/
     --white-color: hsl(0, 0%, 100%);
     --black-color: hsl(0, 0%, 0%);
-    --blue-color: #5372f0;
+    --blue-color: #3b5ddb;
     --blue-light-color: #d2dafc;
     --deep-blue: blue;
 
